--- a/static/index.html
+++ b/static/index.html
@@ -102,12 +102,15 @@
   <div class="wrapper">
    <p>Hello Python! </p>
    
-   <p> 这是<a href="http://code.goodrain.com/demo/python-hello/tree/master" target="_blank">示例页面</a></p>
+   <p> 这是<a href="http://git.oschina.net/JiaFeiX/Py-Hello" target="_blank">示例页面</a></p>
    
    
    <p>
      这是一个静态页面，动态页面示例：<a href="/env" style="color: green; text-decoration: underline;">输出系统环境变量</a>
    </p>
+   
+   <hr>
+   <p>[WEB和云计算技术交流QQ群]  229593086</p>
 
   </div>
  </body>
